--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@ btop/btop.log
 btop/themes
 
 emacs/.cache/
+emacs/auto-save-list/
 emacs/autosaves/
 emacs/backups/
 emacs/elpa/
 emacs/transient/
 emacs/recentf
 *.elc
+
+nvim/lazy-lock.json
