--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,7 +1,9 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
+    "type": "small",
     "padding": {
+      "left": 4,
       "top": 2
     }
   },
@@ -9,25 +11,14 @@
     "title",
     "separator",
     "os",
-    "host",
-    "cpu",
-    "gpu",
     "battery",
-    "uptime",
     "memory",
-    "swap",
     "disk",
-    "board",
     "kernel",
-    "initsystem",
     "packages",
     "shell",
-    "editor",
-    "display",
-    "de",
-    "wm",
     "terminal",
-    "version",
+    "wm",
     "separator",
     "colors"
   ]
