--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 
 $terminal = footclient
 $editor = nvim
-$menu = wofi --show drun --style $$HOME/.config/wofi/src/mocha/style.css
+$menu = wofi --show drun --style /home/andre/.config/wofi/src/mocha/style.css
 
 #################
 ### AUTOSTART ###
@@ -12,7 +12,7 @@ $menu = wofi --show drun --style $$HOME/.config/wofi/src/mocha/style.css
 
 exec-once = foot --server
 exec-once = gentoo-pipewire-launcher
-exec-once = swaybg -i $(find ~/files/wallpapers -type f | shuf -n 1)
+exec-once = swaybg -i $(find ~/files/s -type f | shuf -n 1)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -46,6 +46,8 @@ general {
 }
 
 decoration {
+    drop_shadow = false
+
     rounding = 10
 
     active_opacity = 1.0
@@ -76,6 +78,7 @@ master {
 }
 
 misc { 
+    vfr = true
     force_default_wallpaper = 0
     disable_hyprland_logo = true
 }
