added arch branch

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,8 +11,8 @@ $menu = wofi --show drun --style /home/andre/.config/wofi/src/mocha/style.css
 #################
 
 exec-once = foot --server
-exec-once = gentoo-pipewire-launcher
-exec-once = swaybg -i $(find ~/files/s -type f | shuf -n 1)
+exec-once = pulseaudio
+exec-once = swaybg -i $(find ~/files/wallpapers -type f | shuf -n 1)
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -30,8 +30,8 @@ env = CXX,c++
 #####################
 
 general { 
-    gaps_in = 40
-    gaps_out = 80
+    gaps_in = 10
+    gaps_out = 20
 
     border_size = 2
 
@@ -54,7 +54,7 @@ decoration {
     inactive_opacity = 1.0
 
     blur {
-        enabled = true
+        enabled = false
         size = 2
         passes = 5
         
