--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 
 $terminal = footclient
 $editor = nvim
-$menu = wofi --show drun --style /home/andre/.config/wofi/src/mocha/style.css
+$menu = wofi_run
 
 #################
 ### AUTOSTART ###
@@ -12,7 +12,7 @@ $menu = wofi --show drun --style /home/andre/.config/wofi/src/mocha/style.css
 
 exec-once = foot --server
 exec-once = gentoo-pipewire-launcher
-exec-once = swaybg -i $(find ~/files/s -type f | shuf -n 1)
+exec-once = setbg
 
 #############################
 ### ENVIRONMENT VARIABLES ###
