--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,8 +25,8 @@ env = QT_QPA_PLATFORM,wayland
 #####################
 
 general { 
-    gaps_in = 40
-    gaps_out = 80
+    gaps_in = 10
+    gaps_out = 20
 
     border_size = 2
 
@@ -49,7 +49,7 @@ decoration {
     inactive_opacity = 1.0
 
     blur {
-        enabled = true
+        enabled = false
         size = 2
         passes = 5
         
