added waybar autolaunch

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,8 +11,9 @@ $menu = wofi_run
 #################
 
 exec-once = foot --server
-exec-once = gentoo-pipewire-launcher
+exec-once = pulseaudio
 exec-once = setbg
+exec-once = dbus-launch waybar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
