--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,6 +13,7 @@ $menu = wofi_run
 exec-once = foot --server
 exec-once = gentoo-pipewire-launcher
 exec-once = setbg
+exec-once = dbus-launch waybar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
