added battery icons

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -36,7 +36,20 @@
     "custom/powerline-3-head": { "format": "" },
     "battery": {
       "bat": "BAT0",
-      "format": " {capacity}% "
+      "format": " {capacity} {icon} ",
+      "format-icons": [
+        "󱃍",
+        "󰁺",
+        "󰁻",
+        "󰁼",
+        "󰁽",
+        "󰁾",
+        "󰁿",
+        "󰂀",
+        "󰂁",
+        "󰂂",
+        "󱟢"
+      ]
     },
     "custom/powerline-3-tail": { "format": "" },
 
