--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -15,15 +15,12 @@
     ],
     "modules-right": [
       "custom/powerline-3-head",
-      "battery",
+      "custom/time",
       "custom/powerline-3-tail",
 
       "custom/powerline-4-head",
-      "custom/time",
-      "custom/powerline-4-tail",
-
-      "custom/powerline-5-head",
-      "custom/date"
+      "custom/date",
+      "custom/powerline-4-tail"
     ],
 
     "hyprland/workspaces": { "format": " {} " },
@@ -34,25 +31,19 @@
     "custom/powerline-2-head": { "format": "" },
 
     "custom/powerline-3-head": { "format": "" },
-    "battery": {
-      "bat": "BAT0",
-      "format": " {capacity}% "
-    },
-    "custom/powerline-3-tail": { "format": "" },
-
-    "custom/powerline-4-head": { "format": "" },
     "custom/time": {
       "format": " {} ",
       "exec": "date +'%T'",
       "interval": 1
     },
-    "custom/powerline-4-tail": { "format": "" },
+    "custom/powerline-3-tail": { "format": "" },
 
-    "custom/powerline-5-head": { "format": "" },
+    "custom/powerline-4-head": { "format": "" },
     "custom/date": {
       "format": " {} ",
       "exec": "date +'%a %d %b %Y'",
       "interval": "once"
     },
-    "custom/powerline-5-tail": { "format": "" }
+    "custom/powerline-4-tail": { "format": "" }
+
 }
