--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,13 +44,13 @@ general {
 decoration {
     drop_shadow = false
 
-    rounding = 10
+    rounding = 0
 
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     blur {
-        enabled = false
+        enabled = true
         size = 2
         passes = 5
         
