--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,7 +31,7 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgb(ff966c)
     col.inactive_border = rgba(595959aa)
 
     resize_on_border = false 
@@ -50,7 +50,7 @@ decoration {
     inactive_opacity = 1.0
 
     blur {
-        enabled = true
+        enabled = false
         size = 2
         passes = 5
         
