added bar toggling

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,6 +2,7 @@
 ### MY PROGRAMS ###
 ###################
 
+$bar = dbus-launch waybar
 $terminal = footclient
 $editor = nvim
 $menu = wofi_run
@@ -14,6 +15,7 @@ exec-once = foot --server
 exec-once = pulseaudio
 exec-once = setbg
 exec-once = dbus-launch waybar
+exec-once = $bar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -112,6 +114,7 @@ bind = $mainMod SHIFT, Q, exit,
 
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, P, exec, $menu
+bind = $mainMod, B, exec, toggle $bar
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
