--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,7 +32,7 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(ff966c)
+    col.active_border = rgb(c099ff)
     col.inactive_border = rgba(595959aa)
 
     resize_on_border = false 
