--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -85,29 +85,29 @@ font=0xProto Nerd Font Mono:size=16
 
 [colors]
 alpha=0.7
-background=121116
-foreground=D4D1D7
+background=222436
+foreground=c8d3f5
 # flash=7f7f00
 # flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
-regular0=16161F  # black
-regular1=91323B  # red
-regular2=7DB552  # green
-regular3=E8AC58  # yellow
-regular4=608BD8  # blue
-regular5=6F5D91  # magenta
-regular6=028096  # bright cyan
-regular7=A5A7BF  # white
+regular0=000000  # black
+regular1=c53b53  # red
+regular2=3fd6be  # green
+regular3=ff966c  # yellow
+regular4=3e68d7  # blue
+regular5=9d7cd8  # magenta
+regular6=86e1fc  # bright cyan
+regular7=737aa2  # white
 
 ## Bright colors (color palette 8-15)
-bright0=1A1B27   # bright black
-bright1=C6566E   # bright red
-bright2=87C657   # bright green
-bright3=C5BC12   # bright yellow
-bright4=69D3F5   # bright blue
-bright5=AC83DC   # bright magenta
-bright6=019CB5   # cyan
+bright0=636da6   # bright black
+bright1=ff757f   # bright red
+bright2=c3e88d   # bright green
+bright3=ffc777   # bright yellow
+bright4=82aaff   # bright blue
+bright5=c099ff   # bright magenta
+bright6=b4f9f8   # cyan
 bright7=DFDCE2   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
