--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,7 +32,7 @@ general {
 
     border_size = 2
 
-    col.active_border = rgb(ff966c)
+    col.active_border = rgb(86e1fc)
     col.inactive_border = rgba(595959aa)
 
     resize_on_border = false 
@@ -67,7 +67,7 @@ animations {
 
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 5, default
 }
 
 master {
