--- a/suckless/st/Makefile
+++ b/suckless/st/Makefile
@@ -22,6 +22,7 @@ $(OBJ): config.h config.mk
 
 st: $(OBJ)
 	$(CC) -o $@ $(OBJ) $(STLDFLAGS)
+	strip $@
 
 clean:
 	rm -f st $(OBJ) st-$(VERSION).tar.gz
