--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,13 @@ exec-once = $bar
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = QT_QPA_PLATFORM,wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 #####################
 ### LOOK AND FEEL ###
@@ -30,7 +36,7 @@ general {
     gaps_in = 10
     gaps_out = 20
 
-    border_size = 2
+    border_size = 1
 
     col.active_border = rgb(86e1fc)
     col.inactive_border = rgba(595959aa)
@@ -43,7 +49,7 @@ general {
 }
 
 decoration {
-    drop_shadow = false
+    # drop_shadow = false
 
     rounding = 0
 
