--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,3 +1,8 @@
+################
+### MONITORS ###
+################
+monitor = eDP-1, 1920x1080@60, 0x0, 1
+
 ###################
 ### MY PROGRAMS ###
 ###################
