--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,3 +1,8 @@
+###############
+### MONITOR ###
+###############
+monitor = HDMI-A-1, 3840x2160@60, 0x0, 2
+
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -27,8 +32,8 @@ env = QT_QPA_PLATFORM,wayland
 #####################
 
 general { 
-    gaps_in = 20
-    gaps_out = 40
+    gaps_in = 10
+    gaps_out = 20
 
     border_size = 2
 
@@ -43,8 +48,6 @@ general {
 }
 
 decoration {
-    drop_shadow = false
-
     rounding = 0
 
     active_opacity = 1.0
