--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,7 @@ set $up k
 set $right l
 
 set $term foot
-set $menu wofi --show=drun
+set $menu wofi_run
 
 set $gap_increment 10px
 set $resize_increment 100px
