--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -57,13 +57,13 @@ update_ms = 100
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu lazy"
+proc_sorting = "command"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
 
 #* Show processes as a tree.
-proc_tree = False
+proc_tree = True
 
 #* Use the cpu graph colors in the process list.
 proc_colors = True
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = False
+proc_per_core = True
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -187,7 +187,7 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = False
+io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
